# bride-of-frankensystem

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  REQUIREMENTS.txt  changes.txt  pyproject.toml  setup.py
.github/: FUNDING.yml
BOFS/: BOFSFlask.py  BOFSSession.py  JSONQuestionnaire.py  JSONTable.py  PageList.py  __init__.py  __main__.py  cli.py  create_app.py  globals.py  init_wizard.py  question_schemas.py  sanitizer.py  setup_diagnostics.py  startup.py  update_check.py  util.py  validation.py
BOFS/admin/: QuestionnaireResults.py  Results.py  SummaryStats.py  export_helpers.py  questionnaireResults.py  util.py  views.py
BOFS/default/: __init__.py  models.py  views.py
BOFS/expressions/: __init__.py  evaluator.py  fields.py  parser.py  participant_env.py  substitute.py
BOFS/services/: admin_stats.py  brute_force.py  condition_lookup.py  data_export.py  participant.py  participant_questionnaire.py  routing.py  session_recovery.py
BOFS/static/: style.css  style_admin.css  style_admin_toolbar.css  style_questionnaire.css
BOFS/templates/: condition_lookup_miss.html  consent.html  debug_pick_condition.html  end.html  error.html  external_id.html  instructions.html  macros.html  mturk_id.html  questionnaire.html  questionnaire_macro.html  simple.html  study_closed.html  template.html  unity_webgl.html  unity_webgl_fullscreen.html
docs/: blueprints.rst  conditions.rst  conf.py  configuration.rst  index.rst  installation.rst  instruction_pages.rst  integrating_js_task  integrating_js_task.rst  overview.rst  quickstart.rst  requirements.txt  simple_pages.rst  tables.rst  util.rst
docs/advanced/: accessing_participant_data.rst  advanced_custom_pages.rst  advanced_questionnaires.rst  custom_styling.rst  database_tables.rst  expressions.rst
docs/building/: adding_survey_questions.rst  appearance.rst  conditions_branching.rst  consent.rst  data_quality.rst  index.rst  longitudinal.rst  monitoring_data.rst  page_flow.rst  storing_custom_data.rst  your_own_pages.rst
docs/deploying/: recruiting.rst  server.rst
docs/deployment/: mturk_prolific.rst  server_config.rst
docs/examples/: ab_experiment.rst  branching_example.rst  example_projects.rst  integrating_js_task.rst  longitudinal.rst  p5_example.rst  quickstart.rst  tables_and_expressions_example.rst  unity_example.rst
docs/framework/: architecture.rst  blueprints_routes.rst  database_layer.rst  participant_data.rst  sessions.rst  templates_jinja.rst
docs/getting_started/: admin.rst  basic_questionnaires.rst  initialize_project.rst  install_and_run.rst  installation.rst  overview.rst  project_configuration.rst  quickstart_create.rst  quickstart_custom_task.rst  simple_custom_pages.rst  tutorial_js_task.rst  what_is_bofs.rst
docs/questionnaires/: custom_questions.rst  example.json  grid.json  main.rst  question_types.rst
docs/reference/: accessing_participant_data.rst  built_in_routes.rst  cli-reference.rst  cli.rst  config_options.rst  configuration.rst  custom_tables.rst  default_routes.rst  expressions.rst  helper_functions.rst  index.rst  participant_data_api.rst  question_types.rst  questionnaire_properties.rst  util.rst
docs/routing/: default_routes.rst  main.rst
tests/: conftest.py  verify_summary_stats.py
tests/tier2/: test_activity_injection.py  test_admin_database_dropdown.py  test_admin_stats_service.py  test_bind_orphan_warning.py  test_bind_startup_warnings.py  test_brute_force.py  test_condition_lookup.py  test_config_compat.py  test_database_delete_download.py  test_end_reasons.py  test_expressions_tables.py  test_json_table.py  test_lazy_creation_and_cold_end.py  test_models.py  test_page_list_cache.py  test_participant_methods.py  test_participant_service.py  (+11 more)
(+81 files in other folders)
