[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bride-of-frankensystem"
version = "1.9.2"
description = "A framework that allows for the development of custom online experiments and surveys."
readme = "README.md"
authors = [{ name = "Colby Johanson", email = "colby.johanson@usask.ca" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Framework :: Flask"
]
dependencies = [
    "flask==2.1.3",
    "eventlet==0.33.1",
    "sqlalchemy==1.4.39",
    "flask-sqlalchemy==2.5.1",
    "Werkzeug==2.2.0",
    "dnspython==2.2.1",
    "flask-compress",
    "toml"
]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = [""]

[tool.setuptools.package-data]
"BOFS.admin" = ["BOFS/admin/**/*.*"]
"BOFS.static" = ["BOFS/static/**/*.*"]
"BOFS.templates" = ["BOFS/templates/*.*"]

[project.urls]
Homepage = "https://github.com/colbyj/bride-of-frankensystem/"

[project.scripts]
BOFS = "BOFS.cli:main"