[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bride-of-frankensystem-dev"
version = "2.0.0.60"
description = "A framework that allows for the development of custom online experiments and surveys."
readme = "README.md"
authors = [{ name = "Colby Johanson", email = "colby.g.j@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Framework :: Flask"
]
dependencies = [
    "flask>=2.3.0",
    "flask-wtf>=1.2.0",
    "waitress>=3.0.0",
    "sqlalchemy>=1.4.18",
    "flask-sqlalchemy>=3.0.0",
    "flask-compress",
    "toml",
    "crawlerdetect",
    "pandas",
    "questionary>=2.1.0",
    "bleach>=6.0.0",
    "docstring-parser>=0.16"
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = [""]

[project.urls]
Homepage = "https://github.com/colbyj/bride-of-frankensystem/"
Documentation = "https://docs.frankensystem.net"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[project.scripts]
BOFS = "BOFS.cli:main"